# symbiflow-arch-defs

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  conda_lock.yml  environment.yml  requirements.txt
.github/kokoro/: ql.sh
quicklogic/ap3/primitives/: .CMakeLists.txt.swp  CMakeLists.txt
quicklogic/ap3/primitives/cand/: CMakeLists.txt  cand.sim.v  cand_cell.sim.v
quicklogic/ap3/primitives/canden/: CMakeLists.txt  canden.sim.v
quicklogic/ap3/primitives/clock/: CMakeLists.txt  clock.sim.v  clock_cell.sim.v
quicklogic/ap3/primitives/const_pad/: CMakeLists.txt  const_pad.sim.v
quicklogic/ap3/primitives/d_buff/: CMakeLists.txt  d_buff.sim.v
quicklogic/ap3/primitives/dsp/: CMakeLists.txt  DSP.sim.v  dsp.sim.v
quicklogic/ap3/primitives/ff/: CMakeLists.txt  ff.sim.v
quicklogic/ap3/primitives/full_adder/: CMakeLists.txt  full_adder.sim.v
quicklogic/ap3/primitives/gmux/: CMakeLists.txt  gmux.sim.v  gmux_CLK.sim.v  gmux_HSCK.sim.v  gmux_cell.sim.v  gmux_clk.sim.v  gmux_hsck.sim.v
quicklogic/ap3/primitives/gnd/: CMakeLists.txt  gnd.sim.v  gnd_cell.sim.v
quicklogic/ap3/primitives/in_buff/: CMakeLists.txt  in_buff.sim.v
quicklogic/ap3/primitives/in_reg/: CMakeLists.txt  in_reg.sim.v
quicklogic/ap3/primitives/input/: CMakeLists.txt  input.sim.v
quicklogic/ap3/primitives/input_io/: CMakeLists.txt  input_io.sim.v
quicklogic/ap3/primitives/io_reg/: CMakeLists.txt  d_buff_cell.sim.v  delay.sim.v  dff.sim.v  in_buff_cell.sim.v  in_cell.sim.v  in_reg_cell.sim.v  io_reg.sim.v  mux.sim.v  out_buff_cell.sim.v  out_cell.sim.v  out_reg_cell.sim.v
(+293 files in other folders)
