add_subdirectory(vpr_pad)
add_subdirectory(vcc)
add_subdirectory(gnd)
#add_subdirectory(fpga_interconnect)
add_subdirectory(clock)
add_subdirectory(logic)
add_subdirectory(syn_pad)
add_subdirectory(gmux)
add_subdirectory(qmux)
add_subdirectory(qpmux)
add_subdirectory(sqmux)
add_subdirectory(sqemux)
add_subdirectory(cand)
add_subdirectory(canden)
add_subdirectory(ram)
add_subdirectory(dsp)
add_subdirectory(io_reg)
