add_subdirectory(vpr_pad)
add_subdirectory(vcc)
add_subdirectory(gnd)
#add_subdirectory(fpga_interconnect)
add_subdirectory(ff)
add_subdirectory(lut4)
add_subdirectory(full_adder)
add_subdirectory(logic_cell)
add_subdirectory(ram)
add_subdirectory(dsp)
add_subdirectory(in_buff)
add_subdirectory(out_buff)
